--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,9 +2,13 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
-version: '1.0.0'
+name: 'superstore_dw'
+version: '1.0.1'
 config-version: 2
+
+# This setting is added in version 1.0.1 and set the root directory to 
+#the superstore_dw
+project-root: superstore_dw
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
@@ -32,7 +36,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  superstore_dw:
     # Applies to all files under models/example/
     example:
       materialized: view
