--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -16,12 +16,12 @@ profile: 'default'
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
-model-paths: ["models"]
-analysis-paths: ["analyses"]
-test-paths: ["tests"]
-seed-paths: ["seeds"]
-macro-paths: ["macros"]
-snapshot-paths: ["snapshots"]
+model-paths: ["superstore_dw/models"]
+analysis-paths: ["superstore_dw/analyses"]
+test-paths: ["superstore_dw/tests"]
+seed-paths: ["superstore_dw/seeds"]
+macro-paths: ["superstore_dw/macros"]
+snapshot-paths: ["superstore_dw/snapshots"]
 
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
